...
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Visibility(
              visible: widget.onBack != null,
              replacement: SizedBox(width: 24),
              child: IconButton(
                key: Key('back_button'),
                icon: Icon(
                  Icons.arrow_back_ios,
                  color: Colors.white,
                  weight: 0.5,
                ),
                iconSize: 24,
...
